[package]
name = "just-gl"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
drm = "0.11"
gbm = { version = "0.14", default-features = false, features = ["import-egl", "drm-support"] }
glutin = "0.31"
# Glutin 0.31 depends on rwh 0.5; rwh 0.6 has breaking changes
raw-window-handle = "0.5"
